[package]
name = "document-number-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
terminal-menu = "2.0.4"
termcolor = "1.1.3"
colored = "2.0.0"
terminal-link = "0.1.0"
egui = "0.22.0"
eframe = "0.22.0"
inquire = "0.6.2"
crossterm = "0.27.0"
clipboard = "0.5.0"
